# humanoid_sdk

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build-project.yml
cmake_module/: PrintCmakeVariables.cmake
examples/: CMakeLists.txt  cpp_demo.cpp
include/: humanoid_sdk.h  protocol_definition.h  time_evaluator.h  timer.h
src/: humanoid_sdk.cpp  timer.cpp
wrappers/: CMakeLists.txt
wrappers/python/: CMakeLists.txt  py_humanoid_sdk.cpp
